# lorax

./: .gitignore  Cargo.toml  README.md  build_output.txt  test_config.json  test_config.toml  test_task.txt
.github/workflows/: integration-tests.yml
examples/: README.md  reconstruction_training.rs
examples/training/: README.md  multi_task_training.rs  supervised_training.rs
examples/training/configs/: multi_task_config.toml  reconstruction_config.toml  supervised_config.toml
release/v0.1.0/: checksums.sha256  manifest.json
scripts/: create_release.sh
src/: config.rs  error.rs  lib.rs  main.rs  projection.rs  utils.rs
src/encoder/: bert.rs  embedding.rs  mod.rs  tokenizer.rs
src/hypernetwork/: architectures.rs  forward.rs  lora.rs  mod.rs  models.rs  tests.rs
src/lora/: config.rs  generation.rs  mod.rs  parameters.rs
src/training/: config.rs  mod.rs  trainer.rs
src/training/data/: batching.rs  datasets.rs  loaders.rs  mod.rs  test_module.rs
src/training/loss/: composition.rs  mod.rs  reconstruction.rs  regularization.rs  supervised.rs  utils.rs
src/training/metrics/: aggregators.rs  collectors.rs  exporters.rs  mod.rs  tracker.rs
src/training/optimizers/: adamw.rs  mod.rs  schedulers.rs  sgd.rs  state.rs
src/training/tests/: checkpoint_tests.rs  data_tests.rs  fixtures.rs  integration_tests.rs  loss_tests.rs  mock_data.rs  mod.rs  test_utils.rs  trainer_tests.rs
src/training/trainers/: README.md  mod.rs  reconstruction.rs  supervised.rs  tests.rs
t2l-bench/: Cargo.toml
t2l-bench/src/: lib.rs
t2l-core/: Cargo.toml
t2l-core/examples/: export_ggml.rs  export_huggingface.rs  export_openai.rs
t2l-core/src/: lib.rs
t2l-core/src/apply/: loader.rs  merger.rs  mod.rs  saver.rs
t2l-core/src/cli/: config.rs  error.rs  logging.rs  mod.rs
t2l-core/src/cli/commands/: apply.rs  evaluate.rs  export.rs  generate.rs  infer.rs  mod.rs  serve.rs  train.rs
t2l-core/src/cli/progress/: mod.rs
t2l-core/src/export/: README.md  ggml.rs  huggingface.rs  mod.rs  openai.rs  peft.rs
t2l-core/src/infer/: generator.rs  mod.rs  sampling.rs  tokenizer.rs
t2l-core/src/tests/: mod.rs
t2l-core/src/tests/unit/: encoder_tests.rs  hypernetwork_tests.rs  mod.rs
t2l-core/src/utils/: mod.rs  tensor.rs
t2l-core/tests/: integration.rs  run_integration_tests.sh  test_ggml_export.rs  test_huggingface_export.rs  test_openai_export.rs  test_peft_export.rs
t2l-core/tests/integration/: README.md  architecture_tests.rs  cli_tests.rs  error_tests.rs  export_tests.rs  fixtures.rs  mod.rs  performance_tests.rs  workflow_tests.rs
t2l-cuda/: Cargo.toml
t2l-cuda/src/: lib.rs
t2l-simd/: Cargo.toml
t2l-simd/src/: lib.rs  matmul.rs  ops.rs
