[package]
name = "t2l-cuda"
version = "0.1.0"
edition = "2021"
authors = ["LoRAX Team"]
license = "MIT OR Apache-2.0"

[dependencies]
# CUDA libraries
cudarc = { version = "0.12", features = ["f16"] }
cust = "0.3"
candle-core = { version = "0.6", features = ["cuda"] }

# Core dependencies
bytemuck = "1.0"
half = "2.0"
thiserror = "1.0"
parking_lot = "0.12"

[build-dependencies]
cc = "1.1"
cuda_builder = "0.3"
bindgen = "0.70"

[features]
default = ["multi-gpu"]
multi-gpu = []
tensor-cores = []
graph-optimization = []