[package]
name = "t2l-simd"
version = "0.1.0"
edition = "2021"
authors = ["LoRAX Team"]
license = "MIT OR Apache-2.0"

[dependencies]
bytemuck = "1.0"
half = "2.0"
ndarray = "0.15"
parking_lot = "0.12"
rayon = "1.8"

# SIMD specific
wide = "0.7"
packed_simd_2 = { version = "0.3", features = ["into_bits"] }
simdeez = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
approx = "0.5"

[features]
default = ["avx2"]
avx2 = []
avx512 = []
neon = []
portable = []